--- a/models/sources.yml
+++ b/models/sources.yml
@@ -255,11 +255,11 @@ sources:
     schema: defi
     tables:
       - name: ez_dex_swaps
+      - name: ez_bridge_activity
   - name: near_silver
     database: near
     schema: silver
     tables:
-      - name: dex_swaps_s3
       - name: logs_s3
   - name: osmosis_silver
     database: osmosis
