--- a/models/sources.yml
+++ b/models/sources.yml
@@ -261,12 +261,13 @@ sources:
     schema: defi
     tables:
       - name: fact_dex_swaps
+      - name: ez_dex_swaps
       - name: fact_bridge_activity
+      - name: ez_bridge_activity
   - name: near_silver
     database: near
     schema: silver
     tables:
-      - name: dex_swaps_s3
       - name: logs_s3
   - name: osmosis_silver
     database: osmosis
