Add Near to DEFI Swaps / Bridging (#257)
* add Flow and Near to DEFI Swaps / Bridging

* near dex

* near bridge

--- a/models/sources.yml
+++ b/models/sources.yml
@@ -232,6 +232,12 @@ sources:
     schema: core
     tables:
       - name: ez_token_transfers
+  - name: flow_defi
+    database: flow
+    schema: defi
+    tables:
+      - name: ez_bridge_transactions
+      - name: ez_swaps
   - name: solana_core
     database: solana
     schema: core
@@ -254,12 +260,14 @@ sources:
     database: near
     schema: defi
     tables:
+      - name: fact_dex_swaps
       - name: ez_dex_swaps
+      - name: fact_bridge_activity
+      - name: ez_bridge_activity
   - name: near_silver
     database: near
     schema: silver
     tables:
-      - name: dex_swaps_s3
       - name: logs_s3
   - name: osmosis_silver
     database: osmosis
