--- a/.github/workflows/dbt_run_streamline_asset_metadata_realtime.yml
+++ b/.github/workflows/dbt_run_streamline_asset_metadata_realtime.yml
@@ -1,10 +1,11 @@
-name: dbt_run_streamline_coin_gecko_market_chart_backfill
-run-name: dbt_run_streamline_coin_gecko_market_chart_backfill
+name: dbt_run_streamline_prices_history
+run-name: dbt_run_streamline_prices_history
 
 on:
   workflow_dispatch:
   schedule:
-      - cron: '*/20 * * * *'  
+      # Runs at minute 5 every hour (see https://crontab.guru)
+      - cron: '5 * * * *'  
     
 env:
   DBT_PROFILES_DIR: "${{ vars.DBT_PROFILES_DIR }}"
@@ -25,7 +26,7 @@ jobs:
   called_workflow_template:
     uses: FlipsideCrypto/analytics-workflow-templates/.github/workflows/dbt_run_template.yml@main
     with:
-      dbt_command: dbt run --vars '{"STREAMLINE_INVOKE_STREAMS":True}' -m "crosschain_models,tag:streamline_prices_complete" "crosschain_models,tag:streamline_prices_history" --target prod
+      dbt_command: dbt run --vars '{"STREAMLINE_INVOKE_STREAMS":True}' -m "crosschain_models,tag:streamline_asset_metadata_realtime" --target prod
       environment: workflow_prod
       warehouse: ${{ vars.WAREHOUSE }}
     secrets: inherit 
