--- a/.github/workflows/dbt_run_streamline_coin_gecko_market_chart_backfill.yml
+++ b/.github/workflows/dbt_run_streamline_coin_gecko_market_chart_backfill.yml
@@ -1,11 +1,10 @@
-name: dbt_run_streamline_prices_history
-run-name: dbt_run_streamline_prices_history
+name: dbt_run_streamline_coin_gecko_market_chart_backfill
+run-name: dbt_run_streamline_coin_gecko_market_chart_backfill
 
 on:
   workflow_dispatch:
   schedule:
-      # Runs at minute 20 every hour (see https://crontab.guru)
-      - cron: '20 * * * *'  
+      - cron: '*/20 * * * *'  
     
 env:
   DBT_PROFILES_DIR: "${{ vars.DBT_PROFILES_DIR }}"
@@ -26,7 +25,7 @@ jobs:
   called_workflow_template:
     uses: FlipsideCrypto/analytics-workflow-templates/.github/workflows/dbt_run_template.yml@main
     with:
-      dbt_command: dbt run --vars '{"STREAMLINE_INVOKE_STREAMS":True}' -m "crosschain_models,tag:streamline_prices_complete2" "crosschain_models,tag:streamline_prices_realtime2" --target prod
+      dbt_command: dbt run --vars '{"STREAMLINE_INVOKE_STREAMS":True}' -m "crosschain_models,tag:streamline_prices_complete" "crosschain_models,tag:streamline_prices_history" --target prod
       environment: workflow_prod
       warehouse: ${{ vars.WAREHOUSE }}
     secrets: inherit 
