--- a/models/sources.yml
+++ b/models/sources.yml
@@ -336,6 +336,8 @@ sources:
       - name: asset_ohlc_coin_gecko_api
       - name: asset_prices_coin_gecko_api
       - name: asset_ohlc_coin_gecko_api_v2
+      - name: asset_market_chart_coin_gecko_api_v2
+      - name: asset_metadata_coin_gecko_api_v2
   - name: bronze
     database: crosschain
     schema: bronze
