--- a/.github/workflows/dbt_run_streamline_asset_metadata_realtime.yml
+++ b/.github/workflows/dbt_run_streamline_asset_metadata_realtime.yml
@@ -18,15 +18,13 @@ env:
   DATABASE: "${{ vars.DATABASE }}"
   WAREHOUSE: "${{ vars.WAREHOUSE }}"
   SCHEMA: "${{ vars.SCHEMA }}"
-  STREAMLINE_INVOKE_STREAMS: "True"
-  STREAMLINE_USE_DEV_FOR_EXTERNAL_TABLES: "False"
 
 
 jobs:
   called_workflow_template:
     uses: FlipsideCrypto/analytics-workflow-templates/.github/workflows/dbt_run_template.yml@main
     with:
-      dbt_command: dbt run --vars '{"STREAMLINE_INVOKE_STREAMS":True}' -m "crosschain_models,tag:streamline_asset_metadata_realtime" --target prod
+      dbt_command: dbt run --vars '{"STREAMLINE_INVOKE_STREAMS":True}' -m "crosschain_models,tag:streamline_asset_metadata_realtime"
       environment: workflow_prod
       warehouse: ${{ vars.WAREHOUSE }}
     secrets: inherit 
