--- a/.github/workflows/dbt_run_streamline_prices_realtime.yml
+++ b/.github/workflows/dbt_run_streamline_prices_realtime.yml
@@ -4,8 +4,8 @@ run-name: dbt_run_streamline_prices_history
 on:
   workflow_dispatch:
   schedule:
-      # Runs at minute 20 every hour (see https://crontab.guru)
-      - cron: '20 * * * *'  
+      # Runs at minute 25 every hour (see https://crontab.guru)
+      - cron: '25 * * * *'  
     
 env:
   DBT_PROFILES_DIR: "${{ vars.DBT_PROFILES_DIR }}"
@@ -24,7 +24,7 @@ jobs:
   called_workflow_template:
     uses: FlipsideCrypto/analytics-workflow-templates/.github/workflows/dbt_run_template.yml@main
     with:
-      dbt_command: dbt run --vars '{"STREAMLINE_INVOKE_STREAMS":True}' -m "crosschain_models,tag:streamline_prices_complete2" "crosschain_models,tag:streamline_prices_realtime2" --target prod
+      dbt_command: dbt run --vars '{"STREAMLINE_INVOKE_STREAMS":True}' -m "crosschain_models,tag:streamline_prices_realtime2"
       environment: workflow_prod
       warehouse: ${{ vars.WAREHOUSE }}
     secrets: inherit 
