--- a/.github/workflows/dbt_run_hourly.yml
+++ b/.github/workflows/dbt_run_hourly.yml
@@ -24,7 +24,7 @@ jobs:
   called_workflow_template:
     uses: FlipsideCrypto/analytics-workflow-templates/.github/workflows/dbt_run_template.yml@main
     with:
-      dbt_command: dbt run -s models/silver/hourly_prices+ models/silver/asset_metadata models/silver/near models/silver/defi
+      dbt_command: dbt run -s models/silver/hourly_prices+ models/silver/asset_metadata models/silver/near models/silver/defi models/silver/stats+
       environment: workflow_prod
       warehouse: ${{ vars.WAREHOUSE }}
     secrets: inherit 
