--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -52,8 +52,10 @@ vars:
   UPDATE_UDFS_AND_SPS: False
   HEAL_CURATED_MODEL: []
   
-  API_INTEGRATION: '{{ var("config")[target.name]["API_INTEGRATION"] }}' 
-  EXTERNAL_FUNCTION_URI: '{{ var("config")[target.name]["EXTERNAL_FUNCTION_URI"] }}'
+  API_INTEGRATION: '{{ var("config")[target.name]["API_INTEGRATION"] if var("config")[target.name] else var("config")["dev"]["API_INTEGRATION"] }}' 
+  EXTERNAL_FUNCTION_URI: '{{ var("config")[target.name]["EXTERNAL_FUNCTION_URI"] if var("config")[target.name] else var("config")["dev"]["EXTERNAL_FUNCTION_URI"] }}'
+  ROLES: |
+    ["INTERNAL_DEV"]
   
 
   config:
