--- a/.github/workflows/dbt_run_streamline_prices_history.yml
+++ b/.github/workflows/dbt_run_streamline_prices_history.yml
@@ -1,10 +1,11 @@
-name: dbt_run_streamline_coin_gecko_market_chart_backfill
-run-name: dbt_run_streamline_coin_gecko_market_chart_backfill
+name: dbt_run_streamline_prices_history
+run-name: dbt_run_streamline_prices_history
 
 on:
   workflow_dispatch:
-  # schedule:
-  #     - cron: '*/20 * * * *'  
+  schedule:
+      # Runs at 01:20 daily (see https://crontab.guru)
+      - cron: '20 1 * * *'  
     
 env:
   DBT_PROFILES_DIR: "${{ vars.DBT_PROFILES_DIR }}"
@@ -17,15 +18,13 @@ env:
   DATABASE: "${{ vars.DATABASE }}"
   WAREHOUSE: "${{ vars.WAREHOUSE }}"
   SCHEMA: "${{ vars.SCHEMA }}"
-  STREAMLINE_INVOKE_STREAMS: "True"
-  STREAMLINE_USE_DEV_FOR_EXTERNAL_TABLES: "False"
 
 
 jobs:
   called_workflow_template:
     uses: FlipsideCrypto/analytics-workflow-templates/.github/workflows/dbt_run_template.yml@main
     with:
-      dbt_command: dbt run --vars '{"STREAMLINE_INVOKE_STREAMS":True}' -m "crosschain_models,tag:streamline_prices_complete" "crosschain_models,tag:streamline_prices_history" --target prod
+      dbt_command: dbt run --vars '{"STREAMLINE_INVOKE_STREAMS":True}' -m "crosschain_models,tag:streamline_prices_complete2" "crosschain_models,tag:streamline_prices_history2" --target prod
       environment: workflow_prod
       warehouse: ${{ vars.WAREHOUSE }}
     secrets: inherit 
