--- a/.github/workflows/dbt_run_streamline_prices_history.yml
+++ b/.github/workflows/dbt_run_streamline_prices_history.yml
@@ -43,4 +43,4 @@ jobs:
           dbt deps
       - name: Run DBT Jobs
         run: |
-          dbt run --vars '{"STREAMLINE_INVOKE_STREAMS":True}' -m "crosschain_models,tag:streamline_prices_complete2" "crosschain_models,tag:streamline_prices_history2" --target prod
+          dbt run --vars '{"STREAMLINE_INVOKE_STREAMS":True}' -m "crosschain_models,tag:streamline_prices_complete2" "crosschain_models,tag:streamline_prices_history2"
