--- a/.github/workflows/dbt_run_streamline_asset_metadata_realtime.yml
+++ b/.github/workflows/dbt_run_streamline_asset_metadata_realtime.yml
@@ -3,9 +3,9 @@ run-name: dbt_run_streamline_asset_metadata_realtime
 
 on:
   workflow_dispatch:
-  schedule:
-      # Runs at minute 5 every hour (see https://crontab.guru)
-      - cron: '5 * * * *'  
+  # schedule:
+  #     # Runs at minute 5 every hour (see https://crontab.guru)
+  #     - cron: '5 * * * *'  
     
 env:
   DBT_PROFILES_DIR: "${{ vars.DBT_PROFILES_DIR }}"
