--- a/.github/workflows/dbt_run_streamline_coin_gecko_ohlc.yml
+++ b/.github/workflows/dbt_run_streamline_coin_gecko_ohlc.yml
@@ -3,8 +3,8 @@ run-name: dbt_run_streamline_coin_gecko_ohlc
 
 on:
   workflow_dispatch:
-  # schedule:
-  #   - cron: '0 * * * *'
+  schedule:
+    - cron: '0 * * * *'
     
 env:
   DBT_PROFILES_DIR: "${{ vars.DBT_PROFILES_DIR }}"
