--- a/.github/workflows/dbt_run_streamline_market_asset.yml
+++ b/.github/workflows/dbt_run_streamline_market_asset.yml
@@ -3,8 +3,8 @@ run-name: dbt_run_streamline_market_asset
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '30 1 * * *'
+  # schedule:
+  #   - cron: '30 1 * * *'
     
 env:
   DBT_PROFILES_DIR: "${{ vars.DBT_PROFILES_DIR }}"
@@ -25,6 +25,7 @@ jobs:
     with:
       dbt_command: >
         dbt run-operation run_sp_bulk_get_coin_market_cap_asset_metadata;
+        dbt run-operation run_sp_bulk_get_coin_gecko_asset_metadata;
       environment: workflow_prod
       warehouse: ${{ vars.WAREHOUSE }}
     secrets: inherit 
