--- a/.github/workflows/dbt_run_streamline_prices_realtime.yml
+++ b/.github/workflows/dbt_run_streamline_prices_realtime.yml
@@ -43,4 +43,4 @@ jobs:
           dbt deps
       - name: Run DBT Jobs
         run: |
-          dbt run --vars '{"STREAMLINE_INVOKE_STREAMS":True}' -m "crosschain_models,tag:streamline_prices_complete2" "crosschain_models,tag:streamline_prices_realtime2"
+          dbt run --vars '{"STREAMLINE_INVOKE_STREAMS":True}' -m "crosschain_models,tag:streamline_cmc_prices_complete" "crosschain_models,tag:streamline_cmc_prices_realtime" "crosschain_models,tag:streamline_cg_prices_realtime"
