--- a/models/silver/hourly_prices/coin_market_cap2/silver__all_prices_coinmarketcap2.yml
+++ b/models/silver/hourly_prices/coin_market_cap2/silver__all_prices_coinmarketcap2.yml
@@ -13,27 +13,9 @@ models:
       - name: RECORDED_HOUR
         tests:
           - not_null
-      - name: OPEN
-        tests:
-          - not_null
-          - dbt_expectations.expect_column_values_to_be_in_type_list:
-              column_type_list:
-                - FLOAT
-                - DOUBLE
-      - name: HIGH
-        tests:
-          - not_null
-          - dbt_expectations.expect_column_values_to_be_in_type_list:
-              column_type_list:
-                - FLOAT
-                - DOUBLE
-      - name: LOW
-        tests:
-          - not_null
-          - dbt_expectations.expect_column_values_to_be_in_type_list:
-              column_type_list:
-                - FLOAT
-                - DOUBLE
+          - dbt_expectations.expect_row_values_to_have_recent_data:
+              datepart: day
+              interval: 1
       - name: CLOSE
         tests:
           - not_null
