--- a/.github/workflows/dbt_run_streamline_prices_history.yml
+++ b/.github/workflows/dbt_run_streamline_prices_history.yml
@@ -4,8 +4,8 @@ run-name: dbt_run_streamline_prices_history
 on:
   workflow_dispatch:
   schedule:
-      # Runs at 01:20 daily (see https://crontab.guru)
-      - cron: '20 1 * * *'  
+      # Runs every 4 hours (see https://crontab.guru)
+      - cron: '10 */4 * * *'  
     
 env:
   DBT_PROFILES_DIR: "${{ vars.DBT_PROFILES_DIR }}"
