AN-4624/cmc-prices-sl (#284)
* asset metadata pipeline

* cmc realtime

* realtime and tweaks

* history

* tags

* limit

* batch ids

* partition by

* remove json

* history limit

* legacy prices

* incremental

* legacy data

* legacy asset metadata

* coingecko sp

* comments

* source labels

* tests

* 1=2

* history sched

--- a/models/sources.yml
+++ b/models/sources.yml
@@ -338,6 +338,8 @@ sources:
       - name: asset_ohlc_coin_gecko_api_v2
       - name: asset_market_chart_coin_gecko_api_v2
       - name: asset_metadata_coin_gecko_api_v2
+      - name: asset_metadata_coin_market_cap_api_v2
+      - name: asset_ohlc_coin_market_cap_api_v2
   - name: bronze
     database: crosschain
     schema: bronze
