--- a/.github/workflows/dbt_run_streamline_prices_history.yml
+++ b/.github/workflows/dbt_run_streamline_prices_history.yml
@@ -4,8 +4,8 @@ run-name: dbt_run_streamline_prices_history
 on:
   workflow_dispatch:
   schedule:
-      # Runs at 01:20 daily (see https://crontab.guru)
-      - cron: '20 1 * * *'  
+      # Runs every 4 hours (see https://crontab.guru)
+      - cron: '10 */4 * * *'  
     
 env:
   DBT_PROFILES_DIR: "${{ vars.DBT_PROFILES_DIR }}"
@@ -43,4 +43,4 @@ jobs:
           dbt deps
       - name: Run DBT Jobs
         run: |
-          dbt run --vars '{"STREAMLINE_INVOKE_STREAMS":True}' -m "crosschain_models,tag:streamline_prices_complete2" "crosschain_models,tag:streamline_prices_history2"
+          dbt run --vars '{"STREAMLINE_INVOKE_STREAMS":True}' -m "crosschain_models,tag:streamline_cg_prices_complete" "crosschain_models,tag:streamline_cg_prices_history"
