--- a/.github/workflows/dbt_general_weekly.yml
+++ b/.github/workflows/dbt_general_weekly.yml
@@ -4,7 +4,7 @@ run-name: dbt_general_weekly
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 */1 * * 5-6-7" # Run every Friday, Saturday, and Sunday
+    - cron: "0 */1 * * 5-7" # Run every Friday, Saturday, and Sunday
 
 env:
   DBT_PROFILES_DIR: "${{ vars.DBT_PROFILES_DIR }}"
