--- a/.github/workflows/dbt_run_adhoc.yml
+++ b/.github/workflows/dbt_run_adhoc.yml
@@ -1,13 +1,10 @@
 name: dbt_run_adhoc
-run-name: dbt_run_adhoc
-
+run-name: ${{ inputs.dbt_command }}
 on:
   workflow_dispatch:
-    branches:
-      - "main"
     inputs:
       environment:
-        type: choice 
+        type: choice
         description: DBT Run Environment
         required: true
         options:
@@ -15,43 +12,55 @@ on:
           - prod
         default: dev
       warehouse:
-        type: choice 
+        type: choice
         description: Snowflake warehouse
-        required: true 
+        required: true
         options:
           - DBT
           - DBT_CLOUD
           - DBT_EMERGENCY
+        default: DBT
       dbt_command:
         type: string
         description: 'DBT Run Command'
         required: true
-      update_udfs:
-          type: string 
-          description: Boolean to control updating UDFs and Stored Procedures
-          required: true
-          default: 'False'
-        
-    
 env:
-  DBT_PROFILES_DIR: "${{ vars.DBT_PROFILES_DIR }}"
-  DBT_VERSION: "${{ vars.DBT_VERSION }}"
-  ACCOUNT: "${{ vars.ACCOUNT }}"
-  ROLE: "${{ vars.ROLE }}"
-  USER: "${{ vars.USER }}"
-  PASSWORD: "${{ secrets.PASSWORD }}"
-  REGION: "${{ vars.REGION }}"
-  DATABASE: "${{ vars.DATABASE }}"
-  WAREHOUSE: "${{ inputs.WAREHOUSE }}"
-  SCHEMA: "${{ vars.SCHEMA }}"
-  STREAMLINE_USE_DEV_FOR_EXTERNAL_TABLES: "True"
-
-
+    USE_VARS: "${{ vars.USE_VARS }}"
+    DBT_PROFILES_DIR: "${{ vars.DBT_PROFILES_DIR }}"
+    DBT_VERSION: "${{ vars.DBT_VERSION }}"
+    ACCOUNT: "${{ vars.ACCOUNT }}"
+    ROLE: "${{ vars.ROLE }}"
+    USER: "${{ vars.USER }}"
+    PASSWORD: "${{ secrets.PASSWORD }}"
+    REGION: "${{ vars.REGION }}"
+    DATABASE: "${{ vars.DATABASE }}"
+    WAREHOUSE: "${{ inputs.warehouse }}"
+    SCHEMA: "${{ vars.SCHEMA }}"
+    
+concurrency:
+  group: ${{ github.workflow }}
+  
 jobs:
-  called_workflow_template:
-    uses: FlipsideCrypto/analytics-workflow-templates/.github/workflows/dbt_run_template.yml@main
-    with:
-      dbt_command: ${{ inputs.dbt_command }}
-      environment: workflow_${{ inputs.environment }}
-      warehouse: ${{ inputs.warehouse }}
-    secrets: inherit 
+  run_dbt_jobs:
+    runs-on: ubuntu-latest
+    environment:
+      name: workflow_${{ inputs.environment }}
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+          cache: "pip"
+
+      - name: install dependencies
+        run: |
+          pip install -r requirements.txt
+          dbt deps
+      - name: Run DBT Jobs
+        run: |
+          ${{ inputs.dbt_command }}
+      - name: Store logs
+        uses: actions/upload-artifact@v3
+        with:
+          name: dbt-logs
+          path: logs
