--- a/.github/workflows/dbt_run_streamline_prices_realtime.yml
+++ b/.github/workflows/dbt_run_streamline_prices_realtime.yml
@@ -3,9 +3,8 @@ run-name: dbt_run_streamline_prices_realtime
 
 on:
   workflow_dispatch:
-  schedule:
-      # Runs at minute 25 every hour (see https://crontab.guru)
-      - cron: '25 * * * *'  
+    branches:
+      - "main"
     
 env:
   DBT_PROFILES_DIR: "${{ vars.DBT_PROFILES_DIR }}"
