--- a/models/silver/hourly_prices/silver__token_prices_priority2.yml
+++ b/models/silver/hourly_prices/silver__token_prices_priority2.yml
@@ -18,7 +18,9 @@ models:
               partition_by:
                 - TOKEN_ADDRESS
                 - BLOCKCHAIN
+                - PROVIDER
               column_name: HOUR
+              filter: SOURCE <> 'ibc_prices'
       - name: TOKEN_ADDRESS
         tests:
           - not_null
