AN-4377/rebuild silver prices (#298)
* imputing period

* gap test

* >0

* cmc imputing

* all providers draft

* filters

* edits to asset metadata and last timestamp

* comments

* source

* token address adj

* comments

* rebuild all providers asset metadata

* rebuild all providers prices

* gap test filter

* typo

* osmo 2

* osmo2 yml

* lookback

* is deprecated

* tag for new models

* remove tag

* https filter

* http filter

* inner join solana cmc

* http

* final adj

* more filters

* trim quote

* denom extracted

--- a/models/silver/asset_metadata/silver__token_asset_metadata_priority2.yml
+++ b/models/silver/asset_metadata/silver__token_asset_metadata_priority2.yml
@@ -1,22 +1,19 @@
 version: 2
 models:
-  - name: silver__token_asset_metadata_coingecko2
+  - name: silver__token_asset_metadata_priority2
     tests:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
             - TOKEN_ADDRESS
-            - PLATFORM
+            - BLOCKCHAIN
+          
     columns:
-      - name: ID
+      - name: PROVIDER
         tests:
           - not_null
       - name: TOKEN_ADDRESS
         tests:
           - not_null
-      - name: PLATFORM
+      - name: BLOCKCHAIN
         tests:
           - not_null
-      - name: _INSERTED_TIMESTAMP
-        tests:
-          - not_null
-      
