--- a/.github/workflows/dbt_run_hourly.yml
+++ b/.github/workflows/dbt_run_hourly.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
   schedule:
     # Runs "every hour" (see https://crontab.guru)
-    - cron: '0 */1 * * *'
+    - cron: '45 */1 * * *'
     
 env:
   DBT_PROFILES_DIR: "${{ vars.DBT_PROFILES_DIR }}"
@@ -39,4 +39,4 @@ jobs:
           dbt deps
       - name: Run DBT Jobs
         run: |
-          dbt run -s models/silver/hourly_prices+ models/silver/asset_metadata models/silver/near models/silver/defi models/silver/stats+
+          dbt run -m "crosschain_models,tag:prices" models/silver/hourly_prices+ models/silver/asset_metadata models/silver/near models/silver/defi models/silver/stats+
