--- a/.github/workflows/dbt_run_prices.yml
+++ b/.github/workflows/dbt_run_prices.yml
@@ -1,11 +1,11 @@
-name: dbt_run_scheduled
-run-name: dbt_run_scheduled
+name: dbt_run_scheduled_prices
+run-name: dbt_run_scheduled_prices
 
 on:
   workflow_dispatch:
   schedule:
     # Runs "every hour" (see https://crontab.guru)
-    - cron: '0 */1 * * *'
+    - cron: '45 */1 * * *'
     
 env:
   DBT_PROFILES_DIR: "${{ vars.DBT_PROFILES_DIR }}"
@@ -39,4 +39,4 @@ jobs:
           dbt deps
       - name: Run DBT Jobs
         run: |
-          dbt run -m models/silver/near models/silver/defi models/silver/stats+
+          dbt run -m "crosschain_models,tag:prices" models/silver/hourly_prices models/silver/asset_metadata
