--- a/models/silver/asset_metadata/_asset_metadata3/silver__token_asset_metadata_priority3.yml
+++ b/models/silver/asset_metadata/_asset_metadata3/silver__token_asset_metadata_priority3.yml
@@ -5,7 +5,7 @@ models:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
             - TOKEN_ADDRESS
-            - BLOCKCHAIN
+            - BLOCKCHAIN_ID
           
     columns:
       - name: PROVIDER
@@ -15,5 +15,8 @@ models:
         tests:
           - not_null
       - name: BLOCKCHAIN
+        tests:
+          - not_null
+      - name: BLOCKCHAIN_ID
         tests:
           - not_null
