--- a/models/silver/hourly_prices/_prices3/silver__token_prices_all_providers3.yml
+++ b/models/silver/hourly_prices/_prices3/silver__token_prices_all_providers3.yml
@@ -6,7 +6,7 @@ models:
           combination_of_columns:
             - HOUR
             - TOKEN_ADDRESS
-            - BLOCKCHAIN
+            - BLOCKCHAIN_ID
             - PROVIDER
     columns:
       - name: HOUR
@@ -17,7 +17,7 @@ models:
           - hour_sequence_gaps:
               partition_by:
                 - TOKEN_ADDRESS
-                - BLOCKCHAIN
+                - BLOCKCHAIN_ID
                 - PROVIDER
               column_name: HOUR
               filter: SOURCE <> 'ibc_prices'
@@ -25,6 +25,9 @@ models:
         tests:
           - not_null
       - name: BLOCKCHAIN
+        tests:
+          - not_null
+      - name: BLOCKCHAIN_ID
         tests:
           - not_null
       - name: PROVIDER
