--- a/models/silver/hourly_prices/_prices3/silver__token_prices_priority3.yml
+++ b/models/silver/hourly_prices/_prices3/silver__token_prices_priority3.yml
@@ -6,7 +6,7 @@ models:
           combination_of_columns:
             - HOUR
             - TOKEN_ADDRESS
-            - BLOCKCHAIN
+            - BLOCKCHAIN_ID
 
     columns:
       - name: HOUR
@@ -17,13 +17,16 @@ models:
           - hour_sequence_gaps:
               partition_by:
                 - TOKEN_ADDRESS
-                - BLOCKCHAIN
+                - BLOCKCHAIN_ID
               column_name: HOUR
               filter: SOURCE <> 'ibc_prices'
       - name: TOKEN_ADDRESS
         tests:
           - not_null
       - name: BLOCKCHAIN
+        tests:
+          - not_null
+      - name: BLOCKCHAIN_ID
         tests:
           - not_null
       - name: PROVIDER
