--- a/models/gold/price_temp/price_temp__fact_hourly_token_prices_temp.yml
+++ b/models/gold/price_temp/price_temp__fact_hourly_token_prices_temp.yml
@@ -9,15 +9,17 @@ models:
       - name: TOKEN_ADDRESS
         description: Address of the token
       - name: BLOCKCHAIN
-        description: Blockchain, Network, or Platform the token price is recorded on.
+        description: The Blockchain, Network, or Platform where this asset has a token address. This column is derived by manually grouping blockchain_name, for reference purposes.
+      - name: BLOCKCHAIN_NAME
+        description: The name of the Blockchain, Network, or Platform where this asset has a token address. This may differ by provider.
       - name: BLOCKCHAIN_ID
-        description: The unique identifier for the Blockchain, Network, or Platform the token price is recorded on.
+        description: The unique identifier of the Blockchain, Network, or Platform where this asset has a token address.
       - name: PROVIDER
         description: Source of the token price.
       - name: PRICE
         description: Closing price of the recorded hour in USD
       - name: IS_IMPUTED
-        description: Whether the price was imputed from an earlier record (generally used for low trade volume tokens)
+        description: A flag indicating if the price was imputed, or derived, from the last arriving record. This is generally used for tokens with low-liquidity or inconsistent reporting.
       - name: FACT_HOURLY_TOKEN_PRICES_ID
         description: '{{ doc("pk") }}'   
         tests:
