--- a/models/silver/hourly_prices/_prices3/gold_temp/silver__ez_asset_metadata_temp.yml
+++ b/models/silver/hourly_prices/_prices3/gold_temp/silver__ez_asset_metadata_temp.yml
@@ -1,34 +1,33 @@
 version: 2
 models:
-  - name: price_temp__ez_hourly_token_prices_temp
-    description: A convenience table for determining token prices by address and blockchain.
+  - name: silver__ez_asset_metadata_temp
+    description: A convenience table holding prioritized asset metadata and other relevant details pertaining to each token_address.
     tests:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
-            - HOUR
             - TOKEN_ADDRESS
             - BLOCKCHAIN_ID
 
     columns:
-      - name: HOUR
-        description: Hour that the price was recorded at
-      - name: TOKEN_ADDRESS
-        description: Address of the token
+      - name: ID
+        description: The unique identifier representing the asset.
+      - name: NAME
+        description: The name of asset.
       - name: SYMBOL
-        description: Symbol of the token
-      - name: DECIMALS
-        description: The number of decimals for token contract
+        description: The symbol of asset.
+      - name: TOKEN_ADDRESS
+        description: The specific address representing the asset in a specific platform.
       - name: BLOCKCHAIN
         description: The Blockchain, Network, or Platform where this asset has a token address. This column is derived by manually grouping blockchain_name, for reference purposes.
       - name: BLOCKCHAIN_NAME
         description: The name of the Blockchain, Network, or Platform where this asset has a token address. This may differ by provider.
       - name: BLOCKCHAIN_ID
         description: The unique identifier of the Blockchain, Network, or Platform where this asset has a token address.
-      - name: PRICE
-        description: Closing price of the recorded hour in USD
+      - name: DECIMALS
+        description: The number of decimal places the token needs adjusted where token values exist.
       - name: IS_DEPRECATED
         description: A flag indicating if the asset is deprecated or no longer supported by the provider.
-      - name: EZ_HOURLY_TOKEN_PRICES_ID
+      - name: EZ_ASSET_METADATA_ID
         description: '{{ doc("pk") }}'   
         tests:
           - unique
@@ -36,3 +35,4 @@ models:
         description: '{{ doc("inserted_timestamp") }}'   
       - name: MODIFIED_TIMESTAMP
         description: '{{ doc("modified_timestamp") }}' 
+      
