--- a/models/silver/asset_metadata/_asset_metadata2/coin_gecko2/silver__token_asset_metadata_coingecko2.yml
+++ b/models/silver/asset_metadata/_asset_metadata2/coin_gecko2/silver__token_asset_metadata_coingecko2.yml
@@ -16,6 +16,9 @@ models:
       - name: PLATFORM
         tests:
           - not_null
+      - name: PLATFORM_ID
+        tests:
+          - not_null
       - name: _INSERTED_TIMESTAMP
         tests:
           - not_null
