--- a/models/silver/asset_metadata/_asset_metadata2/coin_market_cap2/silver__token_asset_metadata_coinmarketcap2.yml
+++ b/models/silver/asset_metadata/_asset_metadata2/coin_market_cap2/silver__token_asset_metadata_coinmarketcap2.yml
@@ -5,19 +5,18 @@ models:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
             - TOKEN_ADDRESS
-            - PLATFORM
+            - PLATFORM_ID
     columns:
       - name: ID
         tests:
           - not_null
-      - name: NAME
-        tests:
-          - not_null
-      - name: SYMBOL
-        tests:
-          - not_null
       - name: TOKEN_ADDRESS
+        tests:
+          - not_null
       - name: PLATFORM
+        tests:
+          - not_null
+      - name: PLATFORM_ID
         tests:
           - not_null
       - name: _INSERTED_TIMESTAMP
