--- a/models/silver/asset_metadata/_asset_metadata2/all_providers2/silver__all_asset_metadata_all_providers2.yml
+++ b/models/silver/asset_metadata/_asset_metadata2/all_providers2/silver__all_asset_metadata_all_providers2.yml
@@ -1,22 +1,29 @@
 version: 2
 models:
-  - name: silver__token_asset_metadata_priority2
+  - name: silver__all_asset_metadata_all_providers2
     tests:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
-            - LOWER(TOKEN_ADDRESS)
-            - BLOCKCHAIN_ID
-          
+            - ID
+            - TOKEN_ADDRESS
+            - NAME
+            - SYMBOL
+            - PLATFORM
+            - PLATFORM_ID
+            - PROVIDER
     columns:
       - name: PROVIDER
+        tests:
+          - not_null
+      - name: ID
         tests:
           - not_null
       - name: TOKEN_ADDRESS
         tests:
           - not_null
-      - name: BLOCKCHAIN
+      - name: PLATFORM
         tests:
           - not_null
-      - name: BLOCKCHAIN_ID
+      - name: PLATFORM_ID
         tests:
           - not_null
