--- a/models/silver/asset_metadata/_asset_metadata2/coin_gecko2/silver__all_asset_metadata_coingecko2.yml
+++ b/models/silver/asset_metadata/_asset_metadata2/coin_gecko2/silver__all_asset_metadata_coingecko2.yml
@@ -5,8 +5,11 @@ models:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
             - ID
+            - TOKEN_ADDRESS
+            - NAME
             - SYMBOL
-            - _INSERTED_TIMESTAMP
+            - PLATFORM
+            - PLATFORM_ID
     columns:
       - name: ID
         tests:
