--- a/models/silver/asset_metadata/_asset_metadata2/coin_market_cap2/silver__all_asset_metadata_coinmarketcap2.yml
+++ b/models/silver/asset_metadata/_asset_metadata2/coin_market_cap2/silver__all_asset_metadata_coinmarketcap2.yml
@@ -1,7 +1,15 @@
 version: 2
 models:
   - name: silver__all_asset_metadata_coinmarketcap2
-
+    tests:
+      - dbt_utils.unique_combination_of_columns:
+          combination_of_columns:
+            - ID
+            - TOKEN_ADDRESS
+            - NAME
+            - SYMBOL
+            - PLATFORM
+            - PLATFORM_ID
     columns:
       - name: ID
         tests:
