--- a/models/gold/price_temp/price_temp__dim_asset_metadata_temp.yml
+++ b/models/gold/price_temp/price_temp__dim_asset_metadata_temp.yml
@@ -1,13 +1,7 @@
 version: 2
 models:
   - name: price_temp__dim_asset_metadata_temp
-    description: A comprehensive dimensional table holding all provider asset metadata and other relevant details pertaining to each token_address.
-    tests:
-      - dbt_utils.unique_combination_of_columns:
-          combination_of_columns:
-            - PROVIDER
-            - TOKEN_ADDRESS
-            - BLOCKCHAIN_ID
+    description: A comprehensive dimensional table holding all provider asset metadata and other relevant details pertaining to each id.
 
     columns:
       - name: PROVIDER
@@ -19,21 +13,16 @@ models:
       - name: SYMBOL
         description: The symbol of asset.
       - name: TOKEN_ADDRESS
-        description: The specific address representing the asset in a specific platform.
+        description: The specific address representing the asset on a specific platform.
       - name: BLOCKCHAIN
-        description: The Blockchain, Network, or Platform where this asset has a token address. This column is derived by manually grouping blockchain_name, for reference purposes.
-      - name: BLOCKCHAIN_NAME
-        description: The name of the Blockchain, Network, or Platform where this asset has a token address. This may differ by provider.
+        description: The Blockchain, Network, or Platform where this asset has an id.
       - name: BLOCKCHAIN_ID
-        description: The unique identifier of the Blockchain, Network, or Platform where this asset has a token address.
+        description: The unique identifier of the Blockchain, Network, or Platform where this asset has an id.
       - name: DECIMALS
         description: The number of decimal places the token needs adjusted where token values exist.
-      - name: IS_DEPRECATED
-        description: A flag indicating if the asset is deprecated or no longer supported by the provider.
       - name: DIM_ASSET_METADATA_ID
         description: '{{ doc("pk") }}'   
       - name: INSERTED_TIMESTAMP
         description: '{{ doc("inserted_timestamp") }}'   
       - name: MODIFIED_TIMESTAMP
         description: '{{ doc("modified_timestamp") }}' 
-      
