--- a/models/silver/hourly_prices/_prices2/all_providers2/silver__all_prices_all_providers2.yml
+++ b/models/silver/hourly_prices/_prices2/all_providers2/silver__all_prices_all_providers2.yml
@@ -6,6 +6,7 @@ models:
           combination_of_columns:
             - ID
             - RECORDED_HOUR
+            - PROVIDER
     columns:
       - name: PROVIDER
         tests:
