--- a/models/silver/asset_metadata/_asset_metadata2/all_providers2/silver__token_asset_metadata_priority2.yml
+++ b/models/silver/asset_metadata/_asset_metadata2/all_providers2/silver__token_asset_metadata_priority2.yml
@@ -4,8 +4,8 @@ models:
     tests:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
-            - TOKEN_ADDRESS
-            - BLOCKCHAIN_ID
+            - LOWER(TOKEN_ADDRESS)
+            - BLOCKCHAIN
           
     columns:
       - name: PROVIDER
