--- a/models/silver/asset_metadata/_asset_metadata2/all_providers2/silver__token_asset_metadata_all_providers2.yml
+++ b/models/silver/asset_metadata/_asset_metadata2/all_providers2/silver__token_asset_metadata_all_providers2.yml
@@ -4,7 +4,7 @@ models:
     tests:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
-            - TOKEN_ADDRESS
+            - LOWER(TOKEN_ADDRESS)
             - BLOCKCHAIN_ID
             - PROVIDER
     columns:
