Add/v2-price-unique (#306)
* bronze

* asset metadata ymls

* fact/dim asset metadata and prices

* provider views

* unique bronze silver

* qualify

* qualify

* comment

* imputed prices priority

* qualify

* priority

* lower address qualify

* incremental

* recorded hour

* cluster

--- a/models/silver/asset_metadata/_asset_metadata2/all_providers2/silver__token_asset_metadata_priority2.yml
+++ b/models/silver/asset_metadata/_asset_metadata2/all_providers2/silver__token_asset_metadata_priority2.yml
@@ -1,25 +1,22 @@
 version: 2
 models:
-  - name: silver__token_asset_metadata_coingecko2
+  - name: silver__token_asset_metadata_priority2
     tests:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
             - LOWER(TOKEN_ADDRESS)
-            - PLATFORM_ID
+            - BLOCKCHAIN
+          
     columns:
-      - name: ID
+      - name: PROVIDER
         tests:
           - not_null
       - name: TOKEN_ADDRESS
         tests:
           - not_null
-      - name: PLATFORM
+      - name: BLOCKCHAIN
         tests:
           - not_null
-      - name: PLATFORM_ID
+      - name: BLOCKCHAIN_ID
         tests:
           - not_null
-      - name: _INSERTED_TIMESTAMP
-        tests:
-          - not_null
-      
