--- a/models/bronze/asset_metadata/coingecko/bronze__all_asset_metadata_coingecko2.yml
+++ b/models/bronze/asset_metadata/coingecko/bronze__all_asset_metadata_coingecko2.yml
@@ -1,22 +1,17 @@
 version: 2
 models:
-  - name: silver__token_asset_metadata_coingecko2
+  - name: bronze__all_asset_metadata_coingecko2
     tests:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
-            - LOWER(TOKEN_ADDRESS)
+            - ID
+            - TOKEN_ADDRESS
+            - NAME
+            - SYMBOL
+            - PLATFORM
             - PLATFORM_ID
     columns:
       - name: ID
-        tests:
-          - not_null
-      - name: TOKEN_ADDRESS
-        tests:
-          - not_null
-      - name: PLATFORM
-        tests:
-          - not_null
-      - name: PLATFORM_ID
         tests:
           - not_null
       - name: _INSERTED_TIMESTAMP
