--- a/models/bronze/asset_metadata/coinmarketcap/bronze__all_asset_metadata_coinmarketcap2.yml
+++ b/models/bronze/asset_metadata/coinmarketcap/bronze__all_asset_metadata_coinmarketcap2.yml
@@ -1,12 +1,15 @@
 version: 2
 models:
-  - name: silver__all_asset_metadata_coingecko2
+  - name: bronze__all_asset_metadata_coinmarketcap2
     tests:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
             - ID
+            - TOKEN_ADDRESS
+            - NAME
             - SYMBOL
-            - _INSERTED_TIMESTAMP
+            - PLATFORM
+            - PLATFORM_ID
     columns:
       - name: ID
         tests:
